add service get product detail